--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 title: The Cat's Gone
 logo: /assets/images/thecatsgonetitleteaser.png
-show_downloads: true
+show_downloads: false
 theme: jekyll-theme-minimal
